Added 'Bypass Login' button for development
Added bypass login button that I can use for my own testing, while the login features are still in development. Also added the 'Register' button.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,4 +32,15 @@
         android:layout_height="wrap_content"
         android:text="@string/submit"
         android:onClick="login"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/register" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/bypassLogin"
+        android:onClick="openJokesPage"/>
 </LinearLayout>
