--- a/app/src/main/res/layout/activity_jokes_page.xml
+++ b/app/src/main/res/layout/activity_jokes_page.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_jokes_page"
+    android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,4 +10,4 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="tcss450team3.uw.tacoma.edu.justjokes.JokesPage">
 
-</RelativeLayout>
+</FrameLayout >
