--- a/app/src/main/res/layout/activity_jokes_page.xml
+++ b/app/src/main/res/layout/activity_jokes_page.xml
@@ -24,6 +24,7 @@
         android:orientation="horizontal">
         <TableRow>
     <Button
+        android:id="@+id/prevButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
@@ -33,6 +34,7 @@
         />
 
     <Button
+        android:id="@+id/nextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
