--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="tcss450team3.uw.tacoma.edu.justjokes.MainActivity">
+    tools:context="tcss450team3.uw.tacoma.edu.justjokes.LoginActivity">
 
     <TextView
         android:layout_width="wrap_content"
