Added a TextView to show the user what page their currently on. Fixed a bug introduced in commit: ffd1c23
Deleted the onAttach method in commit ffd1c2, which broke the joke popup dialog. Re-added it in this commit, and now the joke pops up again. Added the page num TextView, which shows the user what page their currently looking at.

--- a/app/src/main/res/layout/activity_jokes_page.xml
+++ b/app/src/main/res/layout/activity_jokes_page.xml
@@ -20,25 +20,34 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TableRow>
-    <Button
-        android:id="@+id/prevButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        android:text="Prev"
-        android:minHeight="0dp"
-        android:minWidth="0dp"
-        />
+            <Button
+                android:id="@+id/prevButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAllCaps="false"
+                android:text="@string/previous"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                />
 
-    <Button
-        android:id="@+id/nextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        android:text="Next"
-        android:minHeight="0dp"
-        android:minWidth="0dp"
-        />
+            <TextView
+                android:id="@+id/pageNum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAllCaps="false"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                />
+
+            <Button
+                android:id="@+id/nextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAllCaps="false"
+                android:text="@string/next"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                />
         </TableRow>
     </TableLayout>
 </LinearLayout>
