--- a/app/src/main/res/layout/fragment_joke.xml
+++ b/app/src/main/res/layout/fragment_joke.xml
@@ -1,20 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <TextView
+        android:layout_gravity="left"
         android:id="@+id/id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:textAppearance="?attr/textAppearanceListItem"
+        android:text="The Calendar Joke"/>
 
-    <TextView
-        android:id="@+id/content"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />zz
+        android:gravity="end"
+        android:orientation="horizontal"
+        android:paddingTop="4.5dp">
+
+
+        <View android:id="@+id/voteBox"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="#1ABDD4"
+            android:visibility="gone"/>
+
+        <View android:id="@+id/favoriteBox"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="#FF4081"
+            android:visibility="gone"/>
+
+    </LinearLayout>
 </LinearLayout>
