--- a/app/src/main/res/layout/fragment_custom_joke_dialog.xml
+++ b/app/src/main/res/layout/fragment_custom_joke_dialog.xml
@@ -49,6 +49,7 @@
         android:background="@color/colorPrimaryDark"/>
 
     <LinearLayout
+        android:id="@+id/imageButtonsPanel"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -62,20 +63,44 @@
                 android:orientation="horizontal"
                 android:gravity="center"
                 android:layout_gravity="center_vertical">
-            <ImageView
-                android:id="@+id/upvoteButton"
-                android:src="@drawable/neutralup"
-                android:layout_height="30dp"
-                android:layout_width="26dp"
-                />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_gravity="center_vertical">
+                    <ImageView
+                        android:id="@+id/upvoteButton"
+                        android:src="@drawable/neutralup"
+                        android:layout_height="30dp"
+                        android:layout_width="26dp"
+                        />
+                    <TextView
+                        android:id="@+id/upvoteCount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"/>
+                </LinearLayout>
 
-            <ImageView
-                android:layout_marginLeft="5dp"
-                android:id="@+id/downvoteButton"
-                android:src="@drawable/neutraldown"
-                android:layout_height="30dp"
-                android:layout_width="26dp"
-                />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="5dp">
+                    <ImageView
+                        android:id="@+id/downvoteButton"
+                        android:src="@drawable/neutraldown"
+                        android:layout_height="30dp"
+                        android:layout_width="26dp"
+                        />
+                    <TextView
+                        android:id="@+id/downvoteCount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"/>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
