Added up/downvote count visibility.
Able to see up/downvotes, and also able to switch pages from dropdown menu.

--- a/app/src/main/res/layout/activity_jokes_page.xml
+++ b/app/src/main/res/layout/activity_jokes_page.xml
@@ -54,6 +54,7 @@
                 android:text="@string/previous"
                 android:minHeight="0dp"
                 android:minWidth="0dp"
+                android:layout_gravity="center_vertical"
                 />
 
             <TextView
@@ -63,14 +64,23 @@
                 android:textAllCaps="false"
                 android:minHeight="0dp"
                 android:minWidth="0dp"
-                android:text=" Page: _ "
+                android:layout_gravity="center_vertical"
+                android:text=" Page:"
                 />
+
+            <Spinner
+                android:id="@+id/dropDownPages"
+                android:layout_width="match_parent"
+                android:layout_height="31dp"
+                android:layout_gravity="center_vertical"
+                android:spinnerMode="dropdown" />
 
             <Button
                 android:id="@+id/nextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAllCaps="false"
+                android:layout_gravity="center_vertical"
                 android:text="@string/next"
                 android:minHeight="0dp"
                 android:minWidth="0dp"
