--- a/app/src/main/res/layout/fragment_joke.xml
+++ b/app/src/main/res/layout/fragment_joke.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingTop="5dp">
 
     <TextView
         android:layout_gravity="left"
@@ -10,8 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:text="The Calendar Joke"/>
+        android:textAppearance="?attr/textAppearanceListItem" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,13 +25,15 @@
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:background="#1ABDD4"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            android:paddingRight="5dp"/>
 
         <View android:id="@+id/favoriteBox"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:background="#FF4081"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            android:paddingRight="5dp"/>
 
     </LinearLayout>
 </LinearLayout>
