--- a/app/src/main/res/layout/activity_jokes_page.xml
+++ b/app/src/main/res/layout/activity_jokes_page.xml
@@ -36,7 +36,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"/>
 
     <TableLayout
