--- a/app/src/main/res/layout/fragment_submit_joke.xml
+++ b/app/src/main/res/layout/fragment_submit_joke.xml
@@ -70,6 +70,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:text="@string/sub_joke_button" />
+        <Button
+            android:id="@+id/clear_fields_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="Clear Text" />
     </LinearLayout>
 
 
