SharedPrefs working. Trying to figure out how to test Parse methods in  Joke

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,4 +52,11 @@
             android:layout_weight="1"
             android:text="@string/register" />
     </LinearLayout>
+    <CheckBox
+        android:id="@+id/saveLoginCheckBox"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/editTextPassword"
+        android:text="@string/remember_me" />
 </LinearLayout>
