Javadoced everything, plus cleaned up the code a little.
Added comments, removed any code that we no longer needed, cleaned up some stuff. Fixed a minor bug that occurred because the JokeTitle wasn't UTF-8 encoded in the buildURL function in the SubmitJoke class (mb lol). Also moved PageDB to the data package.

--- a/app/src/main/res/values/sql_strings.xml
+++ b/app/src/main/res/values/sql_strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="CREATE_COURSE_SQL">
-    CREATE TABLE IF NOT EXISTS Course
+    <string name="CREATE_PAGE_SQL">
+    CREATE TABLE IF NOT EXISTS PageNumbers
     (username TEXT PRIMARY KEY, pageNum INTEGER)
 </string>
 
-<string name="DROP_COURSE_SQL">
-    DROP TABLE IF EXISTS Course
+<string name="DROP_PAGE_SQL">
+    DROP TABLE IF EXISTS PageNumbers
 </string>
 
 </resources>
